# B2B-SaaS

./: main.py  pyproject.toml
backend/: .env  pyproject.toml
backend/app/api/: tasks.py
backend/app/core/: auth.py  config.py
backend/app/models/: task.py
backend/app/schemas/: task.py
