[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "clerk-backend-api>=6.0.1",
    "fastapi>=0.138.1",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "svix>=1.96.1",
    "uvicorn>=0.49.0",
]
